# stats4tmux

./: .gitignore  CMakeLists.txt  README.md  battery.cpp  battery.hpp  main.cpp
inc/: battery.hpp  utils.hpp
src/: battery.cpp  battery.hpp  main.cpp  utils.cpp  utils.hpp
src/test/: CMakeLists.txt  utils_test.cpp
